--- a/viewer/templates/creator.html
+++ b/viewer/templates/creator.html
@@ -9,11 +9,20 @@
 
     <div class="row">
         <div class="col-md-6">
-            <p><strong>Země:</strong> {{ creator.country }} </p>
-            <p><strong>Datum narození: </strong>{{ creator.date_of_birth|date:"d.m.Y" }}</p>
-
+            <p><strong>Země:</strong>
+                <span class="badge badge-secondary">
+                    <a href="{% url 'country' creator.country.id %}" class="text-white">{{ creator.country }}</a>
+                </span>
+            </p>
+            <p>
+                <strong>Datum narození:</strong>
+                {{ creator.date_of_birth }}
+            </p>
             {% if creator.date_of_death %}
-                <p><strong>Datum úmrtí: </strong>{{ creator.date_of_death|date:"d.m.Y" }}</p>
+                <p>
+                    <strong>Datum úmrtí:</strong>
+                    {{ creator.date_of_death }}
+                </p>
             {% endif %}
         </div>
         <div class="col-md-6">
