--- a/viewer/templates/footer.html
+++ b/viewer/templates/footer.html
@@ -1,7 +1,7 @@
 <footer class="text-center text-white bg-dark p-4">
     <a class="text-reset fw-bold"  href="https://github.com/francis-chris5/m10_backend_technologies">GITHUB</a>
-    - PythonRemoteZ4084
-    - Backend Technologies
+    - Patrik Franců
+    - @Hollymovies
 
 
 </footer>
