--- a/viewer/templates/genre.html
+++ b/viewer/templates/genre.html
@@ -14,5 +14,6 @@
 
 
     <a href="{% url 'genre_update' genre.id %}" class="btn btn-primary">Aktualizovat</a>
+    <a href="{% url 'genre_delete' genre.id %}" class="btn btn-danger">Smazat</a>
 
 {% endblock %}
