--- a/viewer/templates/country.html
+++ b/viewer/templates/country.html
@@ -19,4 +19,6 @@
             <li><a href="{% url 'creator' creator.id %}"> {{ creator }}</a></li>
 
         {% endfor %}
+    <a href="{% url 'country_update' country.id %}" class="btn btn-primary">Aktualizovat</a>
+    <a href="{% url 'country_update' country.id %}" class="btn btn-danger">Smazat</a>
 {% endblock %}
