--- a/viewer/templates/creator.html
+++ b/viewer/templates/creator.html
@@ -72,4 +72,5 @@
         </small>
     </p>
     <a href="{% url 'creator_update' creator.id %}" class="btn btn-primary">Aktualizovat</a>
+    <a href="{% url 'creator_delete' creator.id %}" class="btn btn-danger">Smazat</a>
 {% endblock %}
