--- a/viewer/templates/movies.html
+++ b/viewer/templates/movies.html
@@ -15,6 +15,7 @@
             <li>
                 <a href="{% url 'movie' movie.id %}">{{ movie }}</a>
                 <a href="{% url 'movie_update' movie.id %}">✏️</a>
+                <a href="{% url 'movie_delete' movie.id %}">❌</a>
             </li>
 
         {% empty %}
