--- a/templates/form.html
+++ b/templates/form.html
@@ -8,7 +8,21 @@
 
     <form method="post">
         {% csrf_token %}
+
+
         <table> {{ form.as_table }} </table>
+
+
+        {% comment "Formulář pomocé odstavců %}
+        {{ form.as_p }}
+        {% endcomment %}
+
+        {% comment "Formulář jako nečíslovaný seznam %}
+        <ul>
+            {{ form.as_ul }}
+        </ul>
+        {% endcomment %}
+
         <input type="submit" id="id_submit" value="Uložit" class="btn btn-primary">
     </form>
 
