--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -18,12 +18,20 @@
                 {% endif %}
             </div>
             <div class="navbar-nav ml-auto text-white">
-            {% if user.is_authenticated %}
-                Přihlášený jako: {{ user.username }}
+            <div class="nav-item dropdown">
+                {% if user.is_authenticated %}
+                    Přihlášený jako: {{ user.username }}
 
-            {% else %}
-                Nepřihlášený uživatel
-            {% endif %}
+                {% else %}
+                    <a class="nav-link active dropdown-toggle" href="#" data-toggle="dropdown">
+                        Nepřihlášený uživatel
+                    </a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="{% url 'login' %}"> Přihlásit </a>
+                    </div>
+
+                {% endif %}
+                </div>
             </div>
         </div>
     </div>
