--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -18,19 +18,23 @@
                 {% endif %}
             </div>
             <div class="navbar-nav ml-auto text-white">
-            <div class="nav-item dropdown">
-                {% if user.is_authenticated %}
-                    Přihlášený jako: {{ user.username }}
+                <div class="nav-item dropdown">
+                    {% if user.is_authenticated %}
+                        <a class="nav-link active dropdown-toggle" href="#" data-toggle="dropdown">
+                            Přihlášený jako: {{ user.username }}
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="{% url 'logout' %}">Odhlásit</a>
+                        </div>
+                    {% else %}
+                        <a class="nav-link active dropdown-toggle" href="#" data-toggle="dropdown">
+                            Nepřihlášený uživatel
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="{% url 'login' %}"> Přihlásit </a>
+                        </div>
 
-                {% else %}
-                    <a class="nav-link active dropdown-toggle" href="#" data-toggle="dropdown">
-                        Nepřihlášený uživatel
-                    </a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="{% url 'login' %}"> Přihlásit </a>
-                    </div>
-
-                {% endif %}
+                    {% endif %}
                 </div>
             </div>
         </div>
