--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -25,6 +25,8 @@
                         </a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="{% url 'logout' %}">Odhlásit</a>
+                            <a class="dropdown-item" href="{% url 'password_change' %}">Změna hesla</a>
+                            <a class="dropdown-item" href="{% url 'password_reset' %}">Reset hesla</a>
                         </div>
                     {% else %}
                         <a class="nav-link active dropdown-toggle" href="#" data-toggle="dropdown">
@@ -32,6 +34,7 @@
                         </a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="{% url 'login' %}"> Přihlásit </a>
+                            <a class="dropdown-item" href="{% url 'password_reset' %}">Reset hesla</a>
                         </div>
 
                     {% endif %}
