--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -34,6 +34,7 @@
                         </a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="{% url 'login' %}"> Přihlásit </a>
+                            <a class="dropdown-item" href="{% url 'signup' %}"> Zaregistrovat </a>
                             <a class="dropdown-item" href="{% url 'password_reset' %}">Reset hesla</a>
                         </div>
 
