DU - přeložení login page, password_change, password reset.

--- a/accounts/templates/password_reset.html
+++ b/accounts/templates/password_reset.html
@@ -2,11 +2,11 @@
 
 
 {% block title %}
-    Formulář
+    Reset hesla
 {% endblock %}
 
 {% block content %}
-    Pro reset hesla, zadej svůj e-mail, který si použil při registraci.
+    Pro reset hesla, zadej svůj e-mail, který si použil při registraci a odešli požadavek.
 
     <form method="post">
         {% csrf_token %}
@@ -14,7 +14,7 @@
         <table> {{ form.as_table }} </table>
 
 
-        <input type="submit" id="id_submit" value="Uložit" class="btn btn-primary">
+        <input type="submit" id="id_submit" value="Odeslat" class="btn btn-primary">
     </form>
 
 {% endblock %}
